Use local templates to avoid backslashes
Template paths with backslashes seem to cause a failure.
Specifying local files (copied from the originals) seems to work.

--- a/tb-git.Rmd
+++ b/tb-git.Rmd
@@ -10,6 +10,10 @@ output:
     reveal_options:
       slideNumber: true
       previewLinks: true
+  pdf_document:
+    template: "default-1.17.0.2.tex"
+  html:
+    template: "default.html"
 ---
 
 ## Outline
